fixed download overflow

--- a/src/styles/download.scss
+++ b/src/styles/download.scss
@@ -27,3 +27,7 @@
     text-align: justify;
   }
 }
+
+.react-tabs__tab-list {
+  overflow-x: scroll;
+}
